# skill-library

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  QUICKSTART.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/workflows/: desktop-build.yml  release.yml
.omc/plans/: consumer-ui-reconstruction.md  discover-and-skills-merge.md  fix-dirty-dot-and-ai-review.md  heroui-native-theme-migration.md  heroui-perf-drawer-migration.md  workspace-routing-restructure.md
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.test.ts  App.tsx  main.tsx  router.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai_review.rs  app_icons.rs  db.rs  lib.rs  main.rs
apps/desktop/src/context/: WorkspaceContext.ts
apps/desktop/src/hooks/: useLocalStorage.ts  useLocale.ts  useSyncPoller.ts  useTheme.ts  useWindowFocus.ts
apps/desktop/src/lib/: providers.ts  registry.ts  review.ts  skill-library.ts  teamai.ts  workspaceCache.ts
apps/desktop/src/pages/: ActivityPage.tsx  CliPage.tsx  DiscoverPage.tsx  InvitationsPage.tsx  LocalPage.tsx  MySkillsPage.tsx  PublishPage.tsx  SubscriptionsPage.tsx  WorkspacesPage.tsx
apps/desktop/src/routes/: CliRoute.tsx  DiscoverRoute.tsx  InstalledRoute.tsx  SubscriptionsRoute.tsx  WorkspaceActivityRoute.tsx  WorkspaceInvitationsRoute.tsx  WorkspacePublishRoute.tsx  WorkspaceSkillsRoute.tsx
apps/desktop/src/shell/: AuthDialog.tsx  LoginScreen.tsx  RootLayout.tsx  SettingsDialog.tsx  Sidebar.tsx  Topbar.tsx  WorkspacePicker.tsx  WorkspaceShell.tsx
apps/desktop/src/state/: appStore.ts
apps/desktop/src/utils/: format.ts  navigation.ts  risk.ts  workspace-visual.ts
apps/desktop/src/widgets/: ActivityTimeline.tsx  AddWorkspaceDialog.tsx  Card.tsx  CodeEditor.tsx  ComparisonView.tsx  ConsumerSkillCard.tsx  DeviceCodePanel.tsx  DiscoverSkillDetail.tsx  InstallToToolsDialog.tsx  ManagementTable.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  MetricTile.tsx  Pill.tsx  PublishModal.tsx  PushModal.tsx  ResultBlock.tsx  RiskBadge.tsx  SectionHeader.tsx  SegmentedTabs.tsx  SkillCard.tsx  SkillComments.tsx  SkillCommitsTimeline.tsx  SkillDetail.tsx  SkillFileTree.tsx  SkillListWithFiles.tsx  SkillRiskPanel.tsx  SkillSafetyCard.tsx  SkillTree.tsx  SubscribeModal.tsx  SyncSkillModal.tsx  rows.tsx
crates/skill-library-cli/: Cargo.toml
crates/skill-library-cli/src/: main.rs
crates/skill-library-core/: Cargo.toml
crates/skill-library-core/src/: lib.rs
crates/skill-library-installer/: Cargo.toml
crates/skill-library-installer/src/: lib.rs
crates/skill-library-manifest/: Cargo.toml
crates/skill-library-manifest/src/: lib.rs
crates/skill-library-provider/: Cargo.toml
crates/skill-library-provider-gitee/: Cargo.toml
crates/skill-library-provider-gitee/src/: archive.rs  git.rs  governance.rs  http.rs  lib.rs  models.rs  permissions.rs  provider.rs  source.rs  tests.rs  util.rs
crates/skill-library-provider-github/: Cargo.toml
crates/skill-library-provider-github/src/: http.rs  lib.rs  models.rs  scan.rs  tests.rs  traits.rs  util.rs
crates/skill-library-provider-gitlab/: Cargo.toml
crates/skill-library-provider-gitlab/src/: archive.rs  git.rs  governance.rs  http.rs  lib.rs  models.rs  permissions.rs  provider.rs  source.rs  tests.rs
crates/skill-library-provider-webdav/: Cargo.toml
crates/skill-library-provider-webdav/src/: auth.rs  capabilities.rs  client.rs  download.rs  error.rs  index.rs  lib.rs  paths.rs  propfind.rs  tests.rs
crates/skill-library-provider/src/: capabilities.rs  error.rs  lib.rs  models.rs  traits.rs
crates/skill-library-publish/: Cargo.toml
crates/skill-library-publish/src/: lib.rs
crates/skill-library-sync/: Cargo.toml
crates/skill-library-sync/src/: lib.rs  provider_factory.rs  remote_scan.rs
crates/teamai-cli/: Cargo.toml
crates/teamai-cli/src/: main.rs
crates/teamai-core/: Cargo.toml
crates/teamai-core/src/: lib.rs
crates/teamai-installer/: Cargo.toml
crates/teamai-installer/src/: lib.rs
crates/teamai-manifest/: Cargo.toml
crates/teamai-manifest/src/: lib.rs
crates/teamai-provider/: Cargo.toml
crates/teamai-provider-github/: Cargo.toml
crates/teamai-provider-github/src/: lib.rs  scan.rs
crates/teamai-provider/src/: lib.rs
crates/teamai-publish/: Cargo.toml
crates/teamai-publish/src/: lib.rs
crates/teamai-sync/: Cargo.toml
crates/teamai-sync/src/: lib.rs
docs/: ARCHITECTURE.md  DEMO_RUNBOOK.md  MVP_TASKS.md  PRODUCT_DOCUMENT.md  PROVIDER_ADAPTER_REFACTOR.md  PROVIDER_SPIKE.md  SKILL_MANIFEST_SCHEMA.md  TAURI_TECHNICAL_PLAN.md
docs/schemas/: skill-manifest.schema.json
docs/superpowers/plans/: 2026-06-03-gitee-provider-adapter.md  2026-06-03-gitlab-provider-adapter.md  2026-06-03-provider-adapter-refactor.md
scripts/: create-demo-skills-repo.sh  demo-real-provider.sh  push-demo-update.sh  smoke-cli-keypath.sh  smoke-diagnostics.sh  smoke-rollback.sh  verify-demo-evidence.sh
