[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/skill-library-cli",
  "crates/skill-library-core",
  "crates/skill-library-installer",
  "crates/skill-library-manifest",
  "crates/skill-library-provider",
  "crates/skill-library-provider-github",
  "crates/skill-library-publish",
  "crates/skill-library-sync",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.1"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
dotenvy = "0.15"
flate2 = "1"
frontmatter-gen = "0.1"
futures = "0.3"
globset = "0.4"
hex = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
similar = "2"
tar = "0.4"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
url = "2"
walkdir = "2"
