[package]
name = "skill-library-installer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
dirs.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
skill-library-core = { path = "../skill-library-core" }
skill-library-manifest = { path = "../skill-library-manifest" }
tempfile.workspace = true
thiserror.workspace = true
walkdir.workspace = true
