[package]
name = "skill-library-provider-github"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
flate2.workspace = true
futures.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tar.workspace = true
skill-library-core = { path = "../skill-library-core" }
skill-library-manifest = { path = "../skill-library-manifest" }
skill-library-provider = { path = "../skill-library-provider" }
thiserror.workspace = true
tempfile.workspace = true
tracing.workspace = true

[dev-dependencies]
mockito = "1"
tokio = { workspace = true, features = ["macros", "rt"] }
