[package]
name = "skill-library-provider-webdav"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
percent-encoding.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
skill-library-core = { path = "../skill-library-core" }
skill-library-provider = { path = "../skill-library-provider" }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
mockito = "1"
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
