[package]
name = "skill-library-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
skill-library-core = { path = "../skill-library-core" }
thiserror.workspace = true
