[package]
name = "skill-library-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
skill-library-core = { path = "../skill-library-core" }
skill-library-installer = { path = "../skill-library-installer" }
skill-library-manifest = { path = "../skill-library-manifest" }
skill-library-provider = { path = "../skill-library-provider" }
skill-library-provider-github = { path = "../skill-library-provider-github" }
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
