[package]
name = "skill-library-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
skill-library-core = { path = "../skill-library-core" }
skill-library-installer = { path = "../skill-library-installer" }
skill-library-manifest = { path = "../skill-library-manifest" }
skill-library-provider = { path = "../skill-library-provider" }
skill-library-provider-github = { path = "../skill-library-provider-github" }
skill-library-provider-gitee = { path = "../skill-library-provider-gitee" }
skill-library-provider-gitlab = { path = "../skill-library-provider-gitlab" }
skill-library-provider-webdav = { path = "../skill-library-provider-webdav" }
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
