[package]
name = "teamai-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
teamai-core = { path = "../teamai-core" }
tempfile.workspace = true
thiserror.workspace = true
walkdir.workspace = true
