[package]
name = "teamai-publish"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
teamai-core = { path = "../teamai-core" }
teamai-manifest = { path = "../teamai-manifest" }
tempfile.workspace = true
thiserror.workspace = true
walkdir.workspace = true
