[package]
name = "teamai-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "teamai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-opener = "2.5.2"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri = { version = "2", features = [] }
url.workspace = true
teamai-core = { path = "../../../crates/teamai-core" }
teamai-installer = { path = "../../../crates/teamai-installer" }
teamai-manifest = { path = "../../../crates/teamai-manifest" }
teamai-publish = { path = "../../../crates/teamai-publish" }
teamai-provider = { path = "../../../crates/teamai-provider" }
teamai-provider-github = { path = "../../../crates/teamai-provider-github" }
teamai-sync = { path = "../../../crates/teamai-sync" }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
genai = "0.6.3"
