[package]
name = "skill-library-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "skill_library_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri = { version = "2", features = [] }
url.workspace = true
skill-library-core = { path = "../../../crates/skill-library-core" }
skill-library-installer = { path = "../../../crates/skill-library-installer" }
skill-library-manifest = { path = "../../../crates/skill-library-manifest" }
skill-library-publish = { path = "../../../crates/skill-library-publish" }
skill-library-provider = { path = "../../../crates/skill-library-provider" }
skill-library-provider-github = { path = "../../../crates/skill-library-provider-github" }
skill-library-sync = { path = "../../../crates/skill-library-sync" }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
genai = "0.6.3"
